--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
-        elixir-version: 1.11.3
-        otp-version: 23.2.1
+        elixir-version: 1.12.1
+        otp-version: 24.0
 
     - name: Cache elixir deps
       uses: actions/cache@v1
